--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 # Server port is arbitrary
 server.port=8082
 
-# Data Source Setup
-# Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
-#       and provide the credentials below to access it
+# Main Data Source Setup
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=somePassword
 
-# uncomment the below lines to view sql output in console
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+
+#Initialize a Database Using Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
+# spring.h2.console.enabled=true
+
+
+# below lines to view sql output in console
+spring.jpa.show-sql=true
