Added controller layer components and implemeted required methods.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialec
 
 # below lines to view sql output in console
 spring.jpa.show-sql=true
+
+logging.level.root = debug
